[gd_scene load_steps=15 format=3 uid="uid://egreuidahxrp"]

[ext_resource type="Texture2D" uid="uid://d04dhuo7vkoaw" path="res://Graphics/Challengers/SkeletonWarrior/skeleton2_v1_1.png" id="1_56lot"]
[ext_resource type="Script" path="res://Scenes/Characters/Challengers/skeleton_warrior.gd" id="1_jomj0"]
[ext_resource type="Texture2D" uid="uid://7ggdyehaa32c" path="res://Graphics/Challengers/SkeletonWarrior/skeleton2_v1_2.png" id="2_n656f"]
[ext_resource type="Shader" path="res://Shaders/immune.gdshader" id="2_qdo75"]
[ext_resource type="Texture2D" uid="uid://buh56bwpfp063" path="res://Graphics/Challengers/SkeletonWarrior/skeleton2_v1_3.png" id="3_w7kug"]
[ext_resource type="Texture2D" uid="uid://35o4y2qp5h6t" path="res://Graphics/Challengers/SkeletonWarrior/skeleton2_v1_4.png" id="4_vr2cb"]
[ext_resource type="Texture2D" uid="uid://yd7reu0jv0ff" path="res://Graphics/Challengers/SkeletonWarrior/skeleton2_v2_1.png" id="5_j7sot"]
[ext_resource type="Texture2D" uid="uid://bkxgis20e135g" path="res://Graphics/Challengers/SkeletonWarrior/skeleton2_v2_2.png" id="6_h6pjc"]
[ext_resource type="Texture2D" uid="uid://dnafg7s6f7gxy" path="res://Graphics/Challengers/SkeletonWarrior/skeleton2_v2_3.png" id="7_0gkfp"]
[ext_resource type="Texture2D" uid="uid://5ete18aqva5h" path="res://Graphics/Challengers/SkeletonWarrior/skeleton2_v2_4.png" id="8_peb1r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g5qid"]
size = Vector2(15, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_8ui6w"]
radius = 228.219

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vluxy"]
resource_local_to_scene = true
shader = ExtResource("2_qdo75")
shader_parameter/turnWhite = null

[sub_resource type="SpriteFrames" id="SpriteFrames_0tfyn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_56lot")
}, {
"duration": 1.0,
"texture": ExtResource("2_n656f")
}, {
"duration": 1.0,
"texture": ExtResource("3_w7kug")
}, {
"duration": 1.0,
"texture": ExtResource("4_vr2cb")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_j7sot")
}, {
"duration": 1.0,
"texture": ExtResource("6_h6pjc")
}, {
"duration": 1.0,
"texture": ExtResource("7_0gkfp")
}, {
"duration": 1.0,
"texture": ExtResource("8_peb1r")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[node name="SkeletonWarrior" type="CharacterBody2D" groups=["Challenger"]]
collision_layer = 2
collision_mask = 151
script = ExtResource("1_jomj0")
startingHealth = 30
startingSpeed = 70.0
scaleFactor = 1.0

[node name="BodyCollider" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_g5qid")

[node name="DetectionAreas" type="Node2D" parent="."]

[node name="NoticeArea" type="Area2D" parent="DetectionAreas"]

[node name="NoticeAreaCollider" type="CollisionShape2D" parent="DetectionAreas/NoticeArea"]
shape = SubResource("CircleShape2D_8ui6w")

[node name="CharacterImage" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_vluxy")
sprite_frames = SubResource("SpriteFrames_0tfyn")
animation = &"Idle"
autoplay = "Idle"

[node name="Timers" type="Node2D" parent="."]

[node name="ThrowTheKnife" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="DetectionAreas/NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="DetectionAreas/NoticeArea" to="." method="_on_notice_area_body_exited"]
[connection signal="timeout" from="Timers/ThrowTheKnife" to="." method="_on_throw_the_knife_timeout"]
